# wordle_bot

./: Cargo.toml  all_plays.txt  stats.txt
src/: main.rs
