[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.9.0"
float-ord = "0.3.2"
indicatif = { version = "0.16.2", features = ["rayon"] }
itertools = "0.10.3"
lazy_static = "1.4.0"
lru = "0.7.2"
rand = "0.8.4"
rayon = "1.5.1"
structopt = "0.3.26"
